# parodus

./: .gitignore  .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  `  autogen.sh  check.txt  convert-coverage.sh  privilege.c  run.sh
.github/scripts/: get_sonarcloud.sh  rtrouted.sh
.github/workflows/: codeql-analysis.yml  push.yml  release.yml  tag.yml
lib/: CMakeLists.txt  libparodus.h
lib/include/: parodus_wrp_ifc.h
lib/src/: CMakeLists.txt  libparodus.c  libparodus.h  libparodus_log.c  libparodus_log.h  libparodus_queues.c  libparodus_queues.h  libparodus_time.c  libparodus_time.h
lib/tests/: CMakeLists.txt  curl_parodus.py  libpd_test.c  mock_parodus.c  nmsg.c  parodus_test_msgs.txt
patches/: dbg_msgs.patch  lws.patch  nanomsg.patch  nopoll.patch  nopoll_conn.patch  nopoll_mutex_unlock_msgs.patch  resolv.patch
src/: CMakeLists.txt  ParodusInternal.c  ParodusInternal.h  auth_token.c  auth_token.h  client_list.c  client_list.h  close_retry.c  close_retry.h  config.c  config.h  config_file.c  config_file.h  conn_interface.c  conn_interface.h  connection.c  connection.h  connection_http3.cpp  crud_interface.c  crud_interface.h  crud_internal.c  crud_internal.h  crud_tasks.c  crud_tasks.h  downstream.c  downstream.h  event_handler.c  event_handler.h  handleUpstreamMessage.c  heartBeat.c  heartBeat.h  internals.h  libnopoll.def  lws_handlers.c  lws_handlers.h  main.c  mutex.c  mutex.h  networking.c  nopoll_conn.c  (+57 more)
test/: nopoll-regression-client.c
tests/: CMakeLists.txt  clientcert.mch  config_file.json  getaddrs.c  libpd_test.c  mock_connection.c  mock_event_handler.c  nopoll_mock.c  nopoll_mock.h  parodus_cmd.sh  printer.c  printer.h  producer.c  producer.h  return_failure.bsh  return_ser_mac.bsh  return_success.bsh  rq3.txt  simple.c  simple_connection.c  test_ParodusInternal.c  test_auth_token.c  test_auth_token_more.c  test_client_list.c  test_close_retry.c  test_config.c  test_conn_interface-rws.c  test_conn_interface.c  test_connection.c  test_connection_LCM.c  test_connection_LMQ.c  test_connection_LPM.c  test_createConnection.c  test_crud_interface.c  test_crud_internal.c  test_crud_tasks.c  test_downstream.c  test_downstream_more.c  test_get_set.c  test_handleUpstreamMessage.c  (+30 more)
